@@ -3,56 +3,56 @@ package co.edu.uptc.model;
 import co.edu.uptc.dto.PlayerDto;
 import co.edu.uptc.interfaces.ModelInterface;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class ClientModel implements ModelInterface {
-    @Override
-    public void updateGameState(List<PlayerDto> players) {
+    private final List<PlayerDto> players =
+            Collections.synchronizedList(new ArrayList<>());
+    private String  myCode;
+    private String  myRole;
+    private int     myScore;
+    private boolean gameStarted;
 
+    @Override
+    public void updateGameState(List<PlayerDto> incoming) {
+        synchronized (players) {
+            players.clear();
+            players.addAll(incoming);
+        }
     }
 
     @Override
     public void setMyRole(String role, int col, int row) {
-
+        this.myRole = role;
     }
 
     @Override
     public void setMyScore(int score) {
-
+        this.myScore = score;
     }
 
     @Override
     public List<PlayerDto> getPlayers() {
-        return List.of();
+        return Collections.unmodifiableList(players);
     }
 
     @Override
-    public String getMyRole() {
-        return "";
-    }
+    public String getMyRole() { return myRole; }
 
     @Override
-    public int getMyScore() {
-        return 0;
-    }
+    public int getMyScore()   { return myScore; }
 
     @Override
-    public boolean isGameStarted() {
-        return false;
-    }
+    public boolean isGameStarted() { return gameStarted; }
 
     @Override
-    public void setGameStarted(boolean started) {
-
-    }
+    public void setGameStarted(boolean started) { this.gameStarted = started; }
 
     @Override
-    public String getMyCode() {
-        return "";
-    }
+    public String getMyCode() { return myCode; }
 
     @Override
-    public void setMyCode(String code) {
-
-    }
+    public void setMyCode(String code) { this.myCode = code; }
 }
